--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>PFA Map</title>
+    <title>Find a Watch Party!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Bguggs">
     <link href="map.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bottleneck/2.12.2/bottleneck.js"></script>
     <script src="location_data.js"></script>
